--- a/Polymer/wc-movies.html
+++ b/Polymer/wc-movies.html
@@ -4,6 +4,10 @@
         <style>
         .movie {
             background: rgba(235, 233, 249, 1);
+            border-style: double;
+            border-width: 15px;
+            text-align: center;
+            width: 30%;
         }
         </style>
         <div class="movie">
@@ -13,17 +17,16 @@
             <div id="year"> {{ year }}</div>
             <div id="description"> {{ description }} </div>
             <div id="code"> {{ code }} </div>
-            <button id="btn1"> {{ btn1 }} </button>
-            <button id="btn2"> {{ btn2 }} </button>
-            <button id="btn3"> {{ btn3 }} </button>
+            <button id="btn1" value="{{ btn1 }}"> {{ btn1 }} </button>
+            <button id="btn2" value="{{ btn2 }}"> {{ btn2 }} </button>
+            <button id="btn3" value="{{ btn3 }}"> {{ btn3 }} </button>
         </div>
     </template>
     <script>
     (function() {
-        Polymer({
+         WCMovies = Polymer({
             is: 'wc-movies',
-            ready: function() {
-            },
+            ready: function() {},
             properties: {
                 title: {
                     type: String,
@@ -64,7 +67,7 @@
                 }
             },
 
-            getCode : function(title, year){
+            getCode: function(title, year) {
                 return title[0] + title[1] + year[0] + year[1];
             }
         });
