--- a/Polymer/index.html
+++ b/Polymer/index.html
@@ -10,18 +10,18 @@
 </head>
 
 <body>
-    <wc-window>
+    <wc-window kiosko="kiosko1">
         <wc-movies title="Peli1"></wc-movies>
         <wc-movies title="Peli2"></wc-movies>
     </wc-window>
-    <wc-window>
+    <wc-window kiosko="kiosko1">
         <wc-movies title="Peli1"></wc-movies>
     </wc-window>
-    <wc-window>
+    <wc-window kiosko="kiosko1">
         <wc-movies title="Peli3"></wc-movies>
     </wc-window>
 	
-	<wc-kiosko></wc-kiosko>	
+	<wc-kiosko id="kiosko1"></wc-kiosko>	
 </body>
 
 </html>
