--- a/Polymer/index.html
+++ b/Polymer/index.html
@@ -7,21 +7,11 @@
     <link rel="import" href="wc-movies.html">
     <link rel="import" href="wc-ticket.html">
     <link rel="import" href="wc-kiosko.html">
+    <link rel="import" href="wc-text.html">
 </head>
 
-<body>
-    <wc-window kiosko="kiosko1">
-        <wc-movies title="Peli1"></wc-movies>
-        <wc-movies title="Peli2"></wc-movies>
-    </wc-window>
-    <wc-window kiosko="kiosko1">
-        <wc-movies title="Peli1"></wc-movies>
-    </wc-window>
-    <wc-window kiosko="kiosko1">
-        <wc-movies title="Peli3"></wc-movies>
-    </wc-window>
-	
-	<wc-kiosko id="kiosko1"></wc-kiosko>	
+<body style="background-color: rgba(76,76,76,1);">
+	<wc-text> </wc-text>
 </body>
 
 </html>
