--- a/Polymer/index.html
+++ b/Polymer/index.html
@@ -3,11 +3,13 @@
 
 <head>
     <meta charset="utf-8">
+    <link rel="import" href="wc-cinema.html">
     <link rel="import" href="wc-window.html">
     <link rel="import" href="wc-movies.html">
     <link rel="import" href="wc-ticket.html">
     <link rel="import" href="wc-kiosko.html">
     <link rel="import" href="wc-text.html">
+    <script type="text/javascript" src="movies.json"></script>
 </head>
 
 <body style="background-color: rgba(76,76,76,1);">
