--- a/Polymer/index.html
+++ b/Polymer/index.html
@@ -9,7 +9,10 @@
     <link rel="import" href="wc-ticket.html">
     <link rel="import" href="wc-kiosko.html">
     <link rel="import" href="wc-text.html">
-    <script type="text/javascript" src="movies.json"></script>
+    <link rel="import" href="wc-selector.html">
+    <script type="text/javascript" src="moviesA.json"></script>
+    <script type="text/javascript" src="moviesB.json"></script>
+    <script type="text/javascript" src="moviesC.json"></script>
 </head>
 
 <body style="background-color: rgba(76,76,76,1);">
